--- a/manifest.json
+++ b/manifest.json
@@ -75,7 +75,8 @@
                 "payment" : {}
             },
             "splashscreen" : {
-                "androidStyle" : "common"
+                "androidStyle" : "common",
+                "useOriginalMsgbox" : true
             }
         }
     },
