--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,34 @@
 {
-    "name" : "tools",
-    "appid" : "__UNI__9E47B1F",
-    "description" : "云端一体应用快速开发基本项目模版",
-    "versionName" : "1.0.1",
-    "versionCode" : "100",
-    "transformPx" : false,
-    "app-plus" : {
-        "usingComponents" : true,
-        "nvueStyleCompiler" : "uni-app",
-        "compilerVersion" : 3,
-        "splashscreen" : {
-            "alwaysShowBeforeRender" : true,
-            "waiting" : true,
-            "autoclose" : true,
-            "delay" : 0
+    "name": "tools",
+    "appid": "__UNI__9E47B1F",
+    "description": "云端一体应用快速开发基本项目模版",
+    "versionName": "1.0.1",
+    "versionCode": "100",
+    "transformPx": false,
+    "app-plus": {
+        "usingComponents": true,
+        "nvueStyleCompiler": "uni-app",
+        "compilerVersion": 3,
+        "splashscreen": {
+            "alwaysShowBeforeRender": true,
+            "waiting": true,
+            "autoclose": true,
+            "delay": 0
         },
-        "modules" : {
-            "Fingerprint" : {},
-            "Camera" : {},
-            "Contacts" : {},
-            "iBeacon" : {},
-            "OAuth" : {},
-            "Share" : {},
-            "Barcode" : {},
-            "Geolocation" : {},
-            "Push" : {}
+        "modules": {
+            "Fingerprint": {},
+            "Camera": {},
+            "Contacts": {},
+            "iBeacon": {},
+            "OAuth": {},
+            "Share": {},
+            "Barcode": {},
+            "Geolocation": {},
+            "Push": {}
         },
-        "distribute" : {
-            "android" : {
-                "permissions" : [
+        "distribute": {
+            "android": {
+                "permissions": [
                     "<uses-feature android:name=\"android.hardware.camera\"/>",
                     "<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
                     "<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
@@ -53,55 +53,57 @@
                     "<uses-permission android:name=\"android.permission.BLUETOOTH_ADMIN\"/>"
                 ]
             },
-            "ios" : {
-                "dSYMs" : false
+            "ios": {
+                "dSYMs": false
             },
-            "sdkConfigs" : {
-                "push" : {
-                    "unipush" : {
-                        "version" : "2",
-                        "offline" : false
+            "sdkConfigs": {
+                "push": {
+                    "unipush": {
+                        "version": "2",
+                        "offline": false
                     }
                 },
-                "ad" : {},
-                "share" : {},
-                "geolocation" : {
-                    "system" : {
-                        "__platform__" : [ "android" ]
+                "ad": {},
+                "share": {},
+                "geolocation": {
+                    "system": {
+                        "__platform__": [
+                            "android"
+                        ]
                     }
                 },
-                "maps" : {},
-                "oauth" : {},
-                "payment" : {}
+                "maps": {},
+                "oauth": {},
+                "payment": {}
             },
-            "splashscreen" : {
-                "androidStyle" : "common",
-                "useOriginalMsgbox" : true
+            "splashscreen": {
+                "androidStyle": "common",
+                "useOriginalMsgbox": true
             }
         }
     },
-    "quickapp" : {},
-    "mp-weixin" : {
-        "appid" : "",
-        "setting" : {
-            "urlCheck" : false
+    "quickapp": {},
+    "mp-weixin": {
+        "appid": "",
+        "setting": {
+            "urlCheck": false
         },
-        "usingComponents" : true,
-        "optimization" : {
-            "subPackages" : true
+        "usingComponents": true,
+        "optimization": {
+            "subPackages": true
         }
     },
-    "mp-alipay" : {
-        "usingComponents" : true
+    "mp-alipay": {
+        "usingComponents": true
     },
-    "mp-baidu" : {
-        "usingComponents" : true
+    "mp-baidu": {
+        "usingComponents": true
     },
-    "mp-toutiao" : {
-        "usingComponents" : true
+    "mp-toutiao": {
+        "usingComponents": true
     },
-    "uniStatistics" : {
-        "enable" : false
+    "uniStatistics": {
+        "enable": false
     },
-    "vueVersion" : "3"
+    "vueVersion": "3"
 }
