--- a/uniCloud-aliyun/cloudfunctions/lcg-user-children/package.json
+++ b/uniCloud-aliyun/cloudfunctions/lcg-user-children/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "lcg-user-children",
-	"dependencies": {},
-	"cloudfunction-config": {
-		"concurrency": 1,
-		"memorySize": 128,
-		"timeout": 60,
-		"triggers": []
-	},
-	"extensions": {
-		"uni-cloud-jql": {}
-	}
+  "name": "lcg-user-children",
+  "dependencies": {
+    "lcg-common": "file:../common/lcg-common"
+  },
+  "cloudfunction-config": {
+    "concurrency": 1,
+    "memorySize": 128,
+    "timeout": 60,
+    "triggers": []
+  },
+  "extensions": {}
 }
